refactor: newInstance() (deprecated) -> getDeclaredConstructor().newInstance()